# atomic-engine

./: .gitignore  LICENSE  README.md  demo-forge.js  package-lock.json  package.json  setup.py  test-forge.js  test-forge.ts  tsconfig.json  {path}
app/: __init__.py  requirements.txt
app/examples/: __init__.py  usage_examples.py
app/llm/: README.md  __init__.py  client.py  config.py  exceptions.py  ipc_server.py  router.py  streaming.py  token_accounting.py
app/llm/providers/: __init__.py  anthropic.py  azure.py  bedrock.py  ollama.py  openai.py
app/llm/tests/: __init__.py  test_llm.py
docs/: CPP_ORCHESTRATOR.md  ENHANCED_PARSER_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  KNOWLEDGE_SYSTEM.md
src/: index.ts  runtime_globals.ts
src/assembly/: packager.ts
src/core/: brain.ts  parser.ts  pipeline.ts
src/cpp/: CMakeLists.txt  INTEGRATION.md  MANIFEST.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  build.sh  conanfile.txt  main.cpp  test_integration.sh
src/cpp/ipc/: message_protocol.h  python_agent_client.cpp  python_agent_client.h
src/cpp/orchestrator/: metrics.h  orchestrator.cpp  orchestrator.h  pipeline.cpp  pipeline.h
src/cpp/queue/: priority_queue.h  request_queue.cpp  request_queue.h
src/cpp/sandbox/: docker_controller.cpp  docker_controller.h  resource_limits.h
src/cpp/server/: http_server.cpp  http_server.h  request_handler.h
src/cpp/utils/: config.cpp  config.h  helpers.h  logger.cpp  logger.h
src/export/: exporter.ts
src/knowledge/: cache.ts  embedder.ts  hash.ts  http_api.ts  index.ts  knowledge_system.ts  metrics.ts  patterns.ts  schema.sql  template_library.ts  templates.ts  vector_store.ts
src/modules/blackbox/: index.ts
src/modules/brand/: index.ts
src/modules/business/: index.ts
src/modules/forge/: index.ts
src/modules/launch/: index.ts
src/modules/scholar/: index.ts
src/modules/script/: index.ts
src/types/: ambient.d.ts
